# NonCodeX

./: .gitignore  add_script_logic.py  dummy.tsv  dummy_2.tsv
backend/: add_script_logic.py  export_tables_from_sqlite3.py  gunicorn.config.py  manage.py  pyproject.toml
backend/noncodex_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/query_engine/: add_Script.py  add_script_logic.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
frontend/: app.vue  bun.lockb  nuxt.config.ts  package.json
frontend/api/: search.js
frontend/layouts/: default.vue
frontend/pages/: index.vue
