[tool.poetry]
name = "noncodex-backend"
version = "0.1.0"
description = ""
authors = ["Animesh Kumar Singh <animesh.workplace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "^5.1.5"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"
fireducks = "^1.1.8"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
mpire = "^2.10.2"
uvicorn = "^0.34.0"
uvicorn-worker = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
